--- a/themes/terra/style.css
+++ b/themes/terra/style.css
@@ -417,18 +417,24 @@ h2 {
     h2 {
       font-size: 2.625rem; } }
 
+.page-the-project,
+.home {
+  overflow-x: hidden; }
+
+.banner-container {
+  overflow: hidden;
+  width: 100vw; }
+
 .banner {
   min-width: 100%;
   background: -webkit-gradient(linear, left top, left bottom, from(#0059a7), to(#002d6e));
-  background: linear-gradient(180deg, #0059a7 0%, #002d6e 100%);
-  border-bottom-left-radius: 50% 15px;
-  border-bottom-right-radius: 50% 15px; }
+  background: linear-gradient(180deg, #0059a7 0%, #002d6e 100%); }
   @media (min-width: 620px) {
     .banner {
-      border-bottom-left-radius: 0;
-      border-bottom-right-radius: 0;
       background-position: fill;
-      height: 100vh; } }
+      height: 100vh;
+      margin-left: -100px;
+      margin-right: -100px; } }
   .banner .banner-section {
     display: -webkit-box;
     display: -ms-flexbox;
